added link to cba

--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
 				<h2>Currently</h2>
 
 				<ul>
-					<li><h3>Executive Director</h3></li>
-					<li><h4 style="color: #6349CE;">Columbia Bartending Agency and School of Mixology, Inc.</h4></li>
+					<li>
+						<h3>Executive Director</h3>
+					</li>
+					<li>
+						<h4 style="color: #6349CE;">
+							<a href="https://columbiabartending.com">Columbia Bartending Agency and School of Mixology, Inc.</a>
+						</h4>
+					</li>
 				</ul>
 			</div>
 
