--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 				<ul>
 					<li><h3>Columbia University</h3></li>
-					<li><h4 style="color: hotpink">B.A., Financial Economics (2020)</h4></li>
+					<li><h4 style="color: hotpink">B.A., Financial Economics and Computer Science (2020)</h4></li>
 				</ul>				
 			</div>
 		</div>
